<resources>
    <string name="app_name">movieApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="click">click</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Upcoming</string>
    <string name="search">Search</string>
    <string name="communicate">Communicate</string>
    <string name="help">Help</string>
    <string name="about">about</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="content_overview">Content Overview</string>
    <string name="details">Details</string>
    <string name="content_time">Content Time</string>
    <string name="time">Time</string>
    <string name="cinema">cinema</string>
    <string name="inputnama_film">Input Movies</string>
    <string name="favorite">Favorite</string>
    <string name="rating">Rating</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="err_load_failed">Load Failed</string>
    <string name="draw_marker_options_snippet">Open between 10am - 9pm</string>
    <string name="title_activity_maps">Map</string>
    <string name="toast_test">email address should be valid and password length should larger than 4</string>
    <string name="toast_test_sameUser">Register failed,user has been registered</string>
</resources>
