<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/now_playing"
            android:icon="@drawable/playcircleoutline"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/up_coming"
            android:icon="@drawable/videolibrary"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/search" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/videolibrary"
            android:title="@string/favorite" />
        <item
            android:id="@+id/cinema"
            android:icon="@drawable/location"
            android:title="@string/cinema" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/userAccount"
                android:icon="@drawable/user_default"
                android:title="Account" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/help"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
