<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Steven.movieApplication.fragment.NowPlayingFragment">


        <android.support.v7.widget.RecyclerView
            android:divider="#00000000"
            android:padding="7dp"
            android:id="@+id/movie_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

        </android.support.v7.widget.RecyclerView>

</LinearLayout>
