...
            android:id="@+id/btn_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
        <Button
            android:id="@+id/btn_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Purchase"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
    </ScrollView>
...
