<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Steven.movieApplication.fragment.FavoriteFragment">

    <android.support.v7.widget.RecyclerView
        android:divider="#00000000"
        android:padding="7dp"
        android:id="@+id/rv_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/content_main">
    </android.support.v7.widget.RecyclerView>

</FrameLayout>
